SONARPY-2346 Remove usage of old ProjectLevelSymbolTable#from using V1 symbols